--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title:            'Novel(ty) on Stage'
 description:      'Eighteenth-century Stage Adaptations'
-url:              'https://minicomp.github.io'
+url:              'http://www.cassidyholahan.com/stageadapts/'
 baseurl:          '/stageadapts'
 copyright:        'Creative Commons License Attribution-NonCommercial 4.0 International, 2021'
 logo:             '/assets/logo.png'
